namespace LevelUpCSharp.Production
{
	public interface IGarnishable : ISossing
	{
		IGarnishable AddVeg(IGarnish garnish);
	}
}