using System;

namespace LevelUpCSharp.Production
{
	public interface IIngredient
	{
		DateTime ExpDate { get; }
	}
}
