namespace LevelUpCSharp.Production
{
	public interface IGarnish : IIngredient
	{
		string Name { get; }
	}
}