using LevelUpCSharp.Products;

namespace LevelUpCSharp.Production
{
	public interface ISandwichDispatching
	{
		Sandwich Wrap();
	}
}