namespace LevelUpCSharp.Production
{
	internal interface ISandwichSetup
	{
		IGarnishable Use(IKeyIngredient ingredient);
	}
}