namespace LevelUpCSharp.Production
{
	public interface ITopping : IIngredient
	{
		string Name { get; }
	}
}